@@ -175,31 +175,28 @@ class LibcloudSpawner(Spawner):
 
     @gen.coroutine
     def start(self):
-        """Start the process"""
-
-        self.log.debug(self.get_env()["JPY_API_TOKEN"])
+        """Start notebook"""
 
         api_token = self.get_env()["JPY_API_TOKEN"]
-        return self.nodemanager.create_machine(api_token)
+        self.nodemanager.create_machine(api_token)
 
-#         if res:
-#             # Nice ! our instance is up and ready !
-#             self.log.debug("START receive node info")
-# 
-#             #Setting port
-#             self.user.server.ip = self.nodemanager.node_ip
-#             self.user.server.port = self.nodemanager.node_port
-#             self.machineid = self.nodemanager.node.id
-#             self.log.info("Notebook ready at %s:%s (%s)" %
-#                           (self.user.server.ip,
-#                            self.user.server.port,
-#                            self.machineid))
-#             self.db.commit()
-#             yield (self.user.server.ip, self.user.server.port)
-#         else:
-#             self.log.debug("START create_machine return no machine :(")
-#             yield None
-
+        for i in range(self.start_timeout):
+            status = yield self.poll()
+            if status is None:
+                # Notebook ready
+                self.user.server.ip = self.nodemanager.node_ip
+                self.user.server.port = self.nodemanager.node_port
+                self.machineid = self.nodemanager.node.id
+                self.log.info("Yippee notebook ready at %s:%s (%s)" % 
+                              (self.user.server.ip,
+                               self.user.server.port,
+                               self.machineid))
+                self.db.commit()
+                return(self.user.server.ip, self.user.server.port)
+            else:
+                yield gen.sleep(1)
+        # Timeout start failed... 
+        return None
 
     @gen.coroutine
     def poll(self):
